--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>KairosWeb</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="utf-8">
+    <title>Kairós · Gabinete Psicosocial Integral</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <link rel="icon" type="image/png" href="assets/logoKairos.png">
+
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
